dspace/modules/xmlui-mirage2/src/main/webapp/themes/ukuk_publications/styles/_style.scss
/* ... */
header .navbar-default .navbar-toggle .icon-bar, header .navbar-default .navbar-nav .icon-bar {
  background-color: #fff; }

header .navbar-default .navbar-toggle:hover .icon-bar, header .navbar-default .navbar-toggle:focus .icon-bar, header .navbar-default .navbar-nav:hover .icon-bar,
header .navbar-default .navbar-nav:focus .icon-bar {
  background-color: #d22d40; }

.other-identifier-column {
  text-align: left; }

/* END OF: Less then 768px width */
/* 360px to 400px */
@media (min-width: 359px) and (max-width: 400px) {
  header .navbar-default .navbar-text {
    font-size: 14px; }
  .main-content-tabber, .main-content-tabber:hover {
    position: relative;
    top: 0;
    left: 25%;
    color: transparent;
    font-size: 12px; }
  .other-identifier-column {
    text-align: left; } }

/* More then 768px and less then 991px width */
@media (min-width: 768px) and (max-width: 992px) {
  header .navbar-default .navbar-brand {
    background-color: #d22d40;
    height: 40px;
    line-height: 40px; }
  header .navbar-default .navbar-brand:hover, header .navbar-default .navbar-brand:focus {
    background-color: #d22d40; }
  header .navbar-default .navbar-text {
    color: #fff;
    font-family: silkalight;
    font-size: 25px;
    font-variant: small-caps;
    margin-top: 0;
    margin-bottom: 0;
    display: inline-block;
    vertical-align: middle;
    line-height: 40px;
    height: 40px;
    padding-left: 5px;
    /* word-wrap: break-word; */ }
  header .navbar-brand img {
    height: 40px;
    width: 40px; }
  .navbar.navbar-default.navbar-static-top {
    min-height: 40px; }
  .navbar.navbar-default.navbar-static-top a.navbar-brand {
    padding: 0; }
  .navbar.navbar-default.navbar-static-top > .container li > a {
    padding-top: 10.0px;
    padding-bottom: 10.0px;
    line-height: 20px; }
  #ds-language-selection > ul > li > a {
    line-height: 10px;
    padding-top: 8px;
    padding-bottom: 10px; }
  #language-dropdown-toggle-xs {
    margin-right: 0; }
  #ds-navigation-selection-xs {
    margin-right: 0px; }
  #ds-navigation-selection-xs > button.navbar-toggle {
    line-height: 20px;
    padding-left: 5px;
    padding-right: 5px;
    padding-top: 12.0px;
    padding-bottom: 12.0px;
    margin-right: 0px;
    margin-top: 0px;
    margin-bottom: 0px; }
  .navbar-header.pull-right.visible-xs.hidden-sm.hidden-md.hidden-lg > ul li button {
    margin-right: 0;
    margin-bottom: 0;
    margin-top: auto;
    height: 40px;
    border-radius: 0;
    border: 0; }
  header .navbar-default .navbar-toggle .icon-bar, header .navbar-default .navbar-nav .icon-bar {
    background-color: #fff; }
  header .navbar-default .navbar-toggle:hover .icon-bar, header .navbar-default .navbar-toggle:focus .icon-bar, header .navbar-default .navbar-nav:hover .icon-bar,
  header .navbar-default .navbar-nav:focus .icon-bar {
    background-color: #d22d40; }
  .other-identifier-column {
    /* padding-top: 5px;
    padding-bottom: 5px;  */
    text-align: center; } }

/* END OF:  More then 768px and less then 991px width */
/* More then 991px width */
@media (min-width: 992px) {
  .navbar-toggle {
    /* (80px - button height 34px) / 2 = 23px */
    margin-bottom: 10px;
    margin-right: 10px;
    margin-left: 10px;
    padding: 23px 10px !important; }
  header .navbar-default .navbar-brand {
    background-color: #d22d40;
    height: 80px;
    line-height: 80px; }
  header .navbar-default .navbar-brand:hover, header .navbar-default .navbar-brand:focus {
    background-color: #d22d40; }
  header .navbar-default .navbar-text {
    color: #fff;
    font-family: silkalight;
    font-size: 30px;
    font-variant: small-caps;
    margin-top: 0;
    margin-bottom: 0;
    display: inline-block;
    vertical-align: middle;
    line-height: 80px;
    height: 80px; }
  header .navbar-brand img {
    height: 80px;
    width: 80px;
    /* padding: 0; */ }
  .navbar.navbar-default.navbar-static-top {
    min-height: 80px; }
  .navbar.navbar-default.navbar-static-top a.navbar-brand {
    padding: 0; }
  .navbar.navbar-default.navbar-static-top > .container li > a {
    padding-top: 26.5px;
    padding-bottom: 26.5px;
    line-height: 27px; }
  #ds-language-selection > ul > li > a {
    line-height: 12px;
    padding-top: 10px;
    padding-bottom: 10px; }
  .other-identifier-column {
    /* padding-top: 5px;
    padding-bottom: 5px;  */
    text-align: center; } }

/**
LANGUAGE BUTTON
*/
#language-dropdown-toggle > span > .caret {
  border-top: 6px solid;
  vertical-align: baseline; }

label {
  font-family: 'silkasemibold';
  font-weight: normal;
  font-size: 13px; }

.btn {
  border-radius: 0px;
  font-size: 12px; }

.btn-primary {
  color: #fff;
  background-color: #003657;
  border-color: #003657;
  height: 34px; }

.btn-default {
  color: #fff;
  background-color: #003657;
  border-color: #003657;
  height: 34px; }

.btn-default:hover, .btn-default:focus, .btn-default.focus, .btn-default:active, .btn-default.active,
.open > .btn-default.dropdown-toggle {
  color: #d22d40;
  background-color: #fff;
  border-color: #003657;
  font-family: 'silkasemibold'; }

.btn-primary:hover, .btn-primary:focus, .btn-primary.focus, .btn-primary:active, .btn-primary.active,
.open > .btn-primary.dropdown-toggle {
  color: #d22d40;
  background-color: #fff;
  border-color: #003657; }

header .navbar-default .navbar-toggle:hover, header .navbar-default .navbar-toggle:focus, header .navbar-default .navbar-nav:hover, header .navbar-default .navbar-nav:focus {
  background-color: white;
  color: #d22d40; }

header .navbar-default .navbar-toggle > .open > a, header .navbar-default .navbar-toggle > .open > a:hover, header .navbar-default .navbar-toggle > .open > a:focus, header .navbar-default .navbar-nav > .open > a, header .navbar-default .navbar-nav > .open > a:hover, header .navbar-default .navbar-nav > .open > a:focus {
  background-color: white;
  color: #d22d40; }
/* ... */

